! IMDB Search did not work with the localized sites due to new domains used
! imdb_person::filmograf did not catch characters if they had no link. Due
  to changes on the IMDB sites, it in fact did no longer catch any character...
+ pilot movie class now correctly assigns the persons IMDBID
! imdb_person: born() and died() missed to return the year due to IMDB site changes

v1.9.8 (02.12.2009)
-------------------
* started restructuring the classes and files to provide a core API for extensions
+ first extension added: basic functionality for MoviePilot
  (http://www.moviepilot.de/), supporting some movie functionality only
+ added the pilot_imdbfill class constant to define IMDB access level for
  complementary data from IMDB - i.e. information which is generally not
  provided by MoviePilot can be automatically retrieved from there.
* Updates for the APIDoc to reflect the bunch of changes
! imdb: minor fix for releaseInfo()
+ pilot::officialSites now contains links to the corresponding pages on Amazon,
  IMDB, OMDB, and Zelluloid - if available
! imdb::language() was broken
+ movie classes: added method creator() to retrieve the creator of series
! fixing a minor issue (array index) in imdbsearch::results()
+ imdbsearch: added method reset() to clean up the search results array
+ Pilot API: added pilotsearch class to search moviepilot for movies
! imdb::officialSites() returned a bunch of internal links not belonging here
! imdb::runtimes(), imdb::sountrack(), and mpaa_reason() was broken
! imdb_person::filmograf was broken due to an inserted onClick() on IMDB.COM
* imdb_person::movies_actress() was causing false alert in tests
! fixed the imdb::trailers() method. Note that IMDB now only lists their own
  videos, so the imdb_trailers class is (currently) useless.
- removed the imdb_trailers class from checks. As IMDB seems to no longer
  list external trailers, they will either fail. The code for the class will